# projet-restau

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2b3a6c9d1e00_add_user_restaurants.py  2e61b5ceb804_remove_is_admin_from_users.py  3f4c2a9b6d10_add_is_total_to_bk_channel_sales.py  7a8b1d2c9f01_add_bk_reports.py  8b9d2e3f7a10_add_bk_daily_kpis.py  9f1c2a3b4d5e_add_user_name_fields.py  e7ea62215ef1_merge_heads.py  f4322ea48eb5_add_user_role.py  f71744eceff4_init_tables.py
backend/app/: main.py
backend/app/api/: admin.py  audit.py  auth.py  auth_deps.py  bk_reports.py  debug.py  restaurants.py
backend/app/api/schemas/: auth.py
backend/app/core/: audit.py  errors.py  jwt.py  roles.py  security.py  seed.py
backend/app/db/: base.py  session.py  users.py
backend/app/models/: __init__.py  associations.py  audit_log.py  bk_report.py  restaurant.py  user.py
csv/bk/: SyntheseCA_caparprofit.csv  SyntheseCA_consommationparprofit.csv  SyntheseCA_corrections.csv  SyntheseCA_divers.csv  SyntheseCA_reglement.csv  SyntheseCA_remises.csv  SyntheseCA_tva.csv  SyntheseCA_venteAnnexes.csv
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: TopBar.tsx
frontend/src/components/admin/: RestaurantManager.tsx  (+1 more)
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts  apiErrors.ts  auth.ts  restaurants.ts
frontend/src/pages/: Dashboard.tsx  DevPanel.tsx  Login.tsx
(+7 files in other folders)
